--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1256,22 +1256,22 @@ node_types:
         default: false
     artifacts:
       docker_agent_role:
-        file: indigo-dc.docker,v0.0.1-dodas
+        file: indigo-dc.docker,v0.0.2-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
-        file: indigo-dc.consul,v0.0.1-dodas
+        file: indigo-dc.consul,v0.0.3-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       zookeeper_agent_role:
-        file: indigo-dc.zookeeper
+        file: indigo-dc.zookeeper,v0.0.3-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       mesos_agent_role:
-        file: indigo-dc.mesos,v0.0.1-dodas
+        file: indigo-dc.mesos,v0.0.2-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       marathon_agent_role:
-        file: indigo-dc.marathon,v0.0.1-dodas
+        file: indigo-dc.marathon,v0.0.2-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       chronos_agent_role:
-        file: indigo-dc.chronos
+        file: indigo-dc.chronos,v0.0.3-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       nfs_role:
         file: indigo-dc.nfs
@@ -1435,13 +1435,13 @@ node_types:
         default: false
     artifacts:
       docker_agent_role:
-        file: indigo-dc.docker,v0.0.1-dodas
+        file: indigo-dc.docker,v0.0.2-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
-        file: indigo-dc.consul,v0.0.1-dodas
+        file: indigo-dc.consul,v0.0.3-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       mesos_agent_role:
-        file: indigo-dc.mesos,v0.0.1-dodas
+        file: indigo-dc.mesos,v0.0.2-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       nfs_role:
         file: indigo-dc.nfs
@@ -1573,13 +1573,13 @@ node_types:
         required: yes
     artifacts:
       docker_agent_role:
-        file: indigo-dc.docker,v0.0.1-dodas
+        file: indigo-dc.docker,v0.0.2-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       consul_agent_role:
-        file: indigo-dc.consul,v0.0.1-dodas
+        file: indigo-dc.consul,v0.0.3-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
       marathon_lb_role:
-        file: indigo-dc.marathon-lb,v0.0.1-dodas
+        file: indigo-dc.marathon-lb,v0.0.2-dodas
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
