--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1416,6 +1416,239 @@ node_types:
           occurrences: [1, 1]
 
 
+  tosca.nodes.indigo.HTCondorServices:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      config_mode:
+        type: string
+        required: yes
+      htcondor_config_schedd_ip:
+        type: string
+        required: yes
+      master_ips:
+        required: yes
+        type: list
+        entry_schema:
+          type: string
+      lb_ips:
+        required: yes
+        type: list
+        entry_schema:
+          type: string
+    artifacts:
+      htcondor_config_role:
+        file: indigo-dc.htcondor_config
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        start:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/ams_config/artifacts/mesos/htcondor_master_config.yml
+          inputs:
+            zookeeper_peers: { get_property: [ SELF, master_ips ] }
+            lb_peers: { get_property: [ SELF, lb_ips ] }
+            htcondor_config_schedd_ip: { get_property: [ SELF, htcondor_config_schedd_ip ] }
+            config_mode: { get_property: [ SELF, config_mode ] }
+    requirements:
+      - host:
+          capability: tosca.capabilities.indigo.MesosMaster
+          relationship: tosca.relationships.HostedOn
+          node: tosca.nodes.SoftwareComponent
+          occurrences: [1, 1]
+
+  tosca.nodes.indigo.AmsCondorMasterConfig:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      marathon_username:
+        type: string
+        required: yes
+      marathon_password:
+        type: string
+        required: yes
+      htcondor_config_schedd_ip:
+        type: string
+        required: yes
+      ams_default_squid:
+        type: string
+        required: yes
+        default: cream-bdii.pg.infn.it
+      ams_default_squid_port:
+        type: integer
+        required: yes
+        default: 3128
+      number_of_wn_instances:
+        type: integer
+        required: yes
+      number_of_slaves:
+        type: integer
+        required: yes
+      cpu_x_wn:
+        type: float
+        required: yes
+      ram_x_wn:
+        type: float
+        required: yes
+      docker_cpu_x_wn:
+        type: float
+        required: yes
+      docker_ram_x_wn:
+        type: float
+        required: yes
+      ams_use_local_squid:
+        type: boolean
+        required: yes
+        default: false
+      master_ips:
+        required: yes
+        type: list
+        entry_schema:
+          type: string
+      ams_repo_server_url:
+        type: string
+      ams_repo_public_key_path:
+        type: string
+      ams_repo_http_proxy:
+        type: string
+      ams_repo_repository_name:
+        type: string
+      ams_repo_public_key:
+        type: string
+      ams_repo_public_key_url:
+        type: string
+    artifacts:
+      ams_config_role:
+        file: indigo-dc.ams_config
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        start:
+          implementation: 'https://raw.githubusercontent.com/indigo-dc/tosca-types/ams_config/artifacts/mesos/ams_master_config.yml'
+          inputs:
+            mesos_masters_list: { get_property: [ SELF, master_ips ] }
+            consul_servers: { get_property: [ SELF, master_ips ] }
+            zookeeper_host_list: { get_property: [ SELF, master_ips ] }
+            zookeeper_peers: { get_property: [ SELF, master_ips ] }
+            marathon_username: { get_property: [ SELF, marathon_username ] }
+            marathon_password: { get_property: [ SELF, marathon_password ] }
+            htcondor_config_schedd_ip: { get_property: [ SELF, htcondor_config_schedd_ip ] }
+            ams_use_local_squid: { get_input: ams_use_local_squid }
+            ams_default_squid: { get_property: [ SELF, ams_default_squid ] }
+            ams_default_squid_port: { get_property: [ SELF, ams_default_squid_port ] }
+            ams_number_of_wn_instances: { get_property: [ SELF, number_of_wn_instances ] }
+            ams_number_of_slaves: { get_property: [ SELF, number_of_slaves ] }
+            ams_cpu_x_wn: { get_property: [ SELF, cpu_x_wn ] }
+            ams_ram_x_wn: { get_property: [ SELF, ram_x_wn ] }
+            ams_docker_cpu_x_wn: { get_property: [ SELF, docker_cpu_x_wn ] }
+            ams_docker_ram_x_wn: { get_property: [ SELF, docker_ram_x_wn ] }
+            ams_repo_server_url: { get_property: [ SELF, ams_repo_server_url ] }
+            ams_repo_public_key_path: { get_property: [ SELF, ams_repo_public_key_path ] }
+            ams_repo_http_proxy: { get_property: [ SELF, ams_repo_http_proxy ] }
+            ams_repo_repository_name: { get_property: [ SELF, ams_repo_repository_name ] }
+            ams_repo_public_key: { get_property: [ SELF, ams_repo_public_key ] }
+            ams_repo_public_key_url: { get_property: [ SELF, ams_repo_public_key_url ] }
+    requirements:
+      - host:
+          capability: tosca.capabilities.indigo.MesosMaster
+          relationship: tosca.relationships.HostedOn
+          node: tosca.nodes.SoftwareComponent
+          occurrences: [1, 1]
+
+  tosca.nodes.indigo.AmsCondorWnConfig:
+    derived_from: tosca.nodes.SoftwareComponent
+    properties:
+      marathon_username:
+        type: string
+        required: yes
+      marathon_password:
+        type: string
+        required: yes
+      htcondor_config_schedd_ip:
+        type: string
+        required: yes
+      ams_default_squid:
+        type: string
+        required: yes
+        default: cream-bdii.pg.infn.it
+      ams_default_squid_port:
+        type: integer
+        required: yes
+        default: 3128
+      number_of_wn_instances:
+        type: integer
+        required: yes
+      number_of_slaves:
+        type: integer
+        required: yes
+      cpu_x_wn:
+        type: float
+        required: yes
+      ram_x_wn:
+        type: float
+        required: yes
+      docker_cpu_x_wn:
+        type: float
+        required: yes
+      docker_ram_x_wn:
+        type: float
+        required: yes
+      ams_use_local_squid:
+        type: boolean
+        required: yes
+        default: false
+      master_ips:
+        required: yes
+        type: list
+        entry_schema:
+          type: string
+      ams_repo_server_url:
+        type: string
+      ams_repo_public_key_path:
+        type: string
+      ams_repo_http_proxy:
+        type: string
+      ams_repo_repository_name:
+        type: string
+      ams_repo_public_key:
+        type: string
+      ams_repo_public_key_url:
+        type: string
+    artifacts:
+      ams_config_role:
+        file: indigo-dc.ams_config
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        start:
+          implementation: 'https://raw.githubusercontent.com/indigo-dc/tosca-types/ams_config/artifacts/mesos/ams_wn_config.yml'
+          inputs:
+            mesos_masters_list: { get_property: [ SELF, master_ips ] }
+            consul_servers: { get_property: [ SELF, master_ips ] }
+            zookeeper_host_list: { get_property: [ SELF, master_ips ] }
+            zookeeper_peers: { get_property: [ SELF, master_ips ] }
+            marathon_username: { get_property: [ SELF, marathon_username ] }
+            marathon_password: { get_property: [ SELF, marathon_password ] }
+            htcondor_config_schedd_ip: { get_property: [ SELF, htcondor_config_schedd_ip ] }
+            ams_default_squid: { get_property: [ SELF, ams_default_squid ] }
+            ams_default_squid_port: { get_property: [ SELF, ams_default_squid_port ] }
+            ams_number_of_wn_instances: { get_property: [ SELF, number_of_wn_instances ] }
+            ams_number_of_slaves: { get_property: [ SELF, number_of_slaves ] }
+            ams_cpu_x_wn: { get_property: [ SELF, cpu_x_wn ] }
+            ams_ram_x_wn: { get_property: [ SELF, ram_x_wn ] }
+            ams_docker_cpu_x_wn: { get_property: [ SELF, docker_cpu_x_wn ] }
+            ams_docker_ram_x_wn: { get_property: [ SELF, docker_ram_x_wn ] }
+            ams_repo_server_url: { get_property: [ SELF, ams_repo_server_url ] }
+            ams_repo_public_key_path: { get_property: [ SELF, ams_repo_public_key_path ] }
+            ams_repo_http_proxy: { get_property: [ SELF, ams_repo_http_proxy ] }
+            ams_repo_repository_name: { get_property: [ SELF, ams_repo_repository_name ] }
+            ams_repo_public_key: { get_property: [ SELF, ams_repo_public_key ] }
+            ams_repo_public_key_url: { get_property: [ SELF, ams_repo_public_key_url ] }
+    requirements:
+      - host:
+          capability: tosca.capabilities.indigo.MesosSlave
+          relationship: tosca.relationships.HostedOn
+          node: tosca.nodes.SoftwareComponent
+          occurrences: [1, 1]
+
+
   tosca.nodes.indigo.LRMS.WorkerNode.Mesos:
     derived_from: tosca.nodes.indigo.LRMS.WorkerNode
     capabilities:
