--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -19,6 +19,7 @@
     nfs_exports: [{path: "/home", export: "{{ vnode_prefix }}*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}]
   - role: indigo-dc.slurm
     slurm_type_of_node: 'front'
+    slurm_wn_num: '{{ wn_num: }}'
     slurm_wn_ips: '{{ wn_ips }}'
     slurm_vnode_prefix: '{{ vnode_prefix }}'
     slurm_wn_nodenames: '{{ groups["lrms_wn"]|map("extract", hostvars, "ansible_hostname")|list if "lrms_wn" in groups else [] }}'
