--- a/artifacts/lrms/slurm/slurm_wn_install.yml
+++ b/artifacts/lrms/slurm/slurm_wn_install.yml
@@ -4,10 +4,10 @@
   pre_tasks:
   - name: "Add private ip master mapping in hosts file"
     lineinfile: dest=/etc/hosts regexp='.*slurmserver.localdomain.*$' line="{{ slurm_front_end_ip }} slurmserver slurmserver.localdomain" state=present
-    when: not wn_hybrid_cluster or IM_NODE_PUBLIC_IP is undefined or IM_NODE_PUBLIC_IP != IM_NODE_PRIVATE_IP
+    when: not wn_hybrid_cluster or IM_NODE_PUBLIC_IP is undefined
   - name: "Add public ip master mapping in hosts file"
     lineinfile: dest=/etc/hosts regexp='.*slurmserver.localdomain.*$' line="{{ slurm_public_front_end_ip }} slurmserver slurmserver.localdomain" state=present
-    when: wn_hybrid_cluster and IM_NODE_PUBLIC_IP is defined and IM_NODE_PUBLIC_IP == IM_NODE_PRIVATE_IP
+    when: wn_hybrid_cluster and IM_NODE_PUBLIC_IP is defined
   roles:
   - role: indigo-dc.openvpn
     openvpn_type_of_node: 'wn'
