Fix openvpn issues

--- a/artifacts/lrms/slurm/slurm_wn_install.yml
+++ b/artifacts/lrms/slurm/slurm_wn_install.yml
@@ -23,4 +23,4 @@
     when: not wn_hybrid_cluster
   - role: indigo-dc.slurm
     slurm_type_of_node: 'wn'
-    slurm_server_ip: '{{ slurm_front_end_ip }}'
+    slurm_server_ip: 'slurmserver'
